--- a/app/modal/page.mdx
+++ b/app/modal/page.mdx
@@ -1,8 +1,4 @@
-import {DemoSingle, DemoMulti} from "./Demo"
+import {DemoBasicModal} from "./Demo"
 
-## Single Accordion
-<DemoSingle/>
+<DemoBasicModal/>
 
-
-## Multiple Accordion
-<DemoMulti/>
