add modal demos

--- a/app/modal/page.mdx
+++ b/app/modal/page.mdx
@@ -1,4 +1,12 @@
-import {DemoBasicModal} from "./Demo"
+import {DemoBasicModal,DemoStaticModal,DemoSmallModal, DemoLargeModal, DemoXLargeModal} from "./Demo"
 
 <DemoBasicModal/>
+
+<DemoStaticModal/>
+
+<DemoSmallModal/>
+
+<DemoLargeModal/>
+
+<DemoXLargeModal/>
 
