--- a/app/dropdown/page.mdx
+++ b/app/dropdown/page.mdx
@@ -1,3 +1,7 @@
-import {DemoBasicDropdown} from "./Demo"
+import {DemoBasicDropdown, DemoInputDropdown, DemoSelectDropdown} from "./Demo"
 
 <DemoBasicDropdown/>
+
+<DemoInputDropdown/>
+
+<DemoSelectDropdown/>
