--- a/app/number-input/page.mdx
+++ b/app/number-input/page.mdx
@@ -3,4 +3,11 @@ import * as Demo from "./Demo"
 
 <Demo.DemoNumberInput/>
 
+<Demo.DemoCurrencyInput/>
+
+<Demo.DemoPhoneInput/>
+
+<Demo.DemoPattenInput/>
+
+
 
