update floating label

--- a/app/input/page.mdx
+++ b/app/input/page.mdx
@@ -1,9 +1,9 @@
-import {DemoBasicInput, DemoFloatingLabelInput,DemoClearableInput,DemoErrorInput,DemoSuccessInput} from "./Demo"
+import {DemoBasicInput, DemoFloatingLabelInput,DemoClearableInput,DemoErrorInput,DemoSuccessInput,DemoLabelInput} from "./Demo"
 
 
 <DemoBasicInput/>
-<DemoFloatingLabelInput/>
 <DemoClearableInput/>
 <DemoErrorInput/>
 <DemoSuccessInput/>
+<DemoLabelInput/>
 
