--- a/app/password-input/page.mdx
+++ b/app/password-input/page.mdx
@@ -6,4 +6,5 @@ import * as Demo from "./Demo"
 <Demo.DemoClearablePasswordInput/>
 <Demo.DemoErrorPasswordInput/>
 <Demo.DemoSuccessPasswordInput/>
+<Demo.DemoLabelPasswordInput/>
 
