update more details for demo pages

--- a/app/button/page.mdx
+++ b/app/button/page.mdx
@@ -1,9 +1,13 @@
 import {DemoBasicButton, DemoVariantsButton, DemoSizesButton,DemoStatesButton} from "./Demo"
 
+## Basic
 <DemoBasicButton/>
 
+## Variants
 <DemoVariantsButton/>
 
+## Sizes
 <DemoSizesButton/>
 
+## States
 <DemoStatesButton/>
