--- a/app/modal/page.mdx
+++ b/app/modal/page.mdx
@@ -1,10 +1,15 @@
 import {DemoBasicModal,DemoStaticModal,DemoSmallModal, DemoLargeModal, DemoXLargeModal} from "./Demo"
 
+## Basic
 <DemoBasicModal/>
 
+## Static
 <DemoStaticModal/>
 
+## Sizes
 <DemoSmallModal/>
+
+<DemoStaticModal/>
 
 <DemoLargeModal/>
 
