--- a/app/number-input/page.mdx
+++ b/app/number-input/page.mdx
@@ -1,14 +1,18 @@
 import * as Demo from "./Demo"
 
-
+## Thousands separator
 <Demo.DemoNumberInput/>
 
+## Currency unit
 <Demo.DemoCurrencyInput/>
 
+## Space separator
 <Demo.DemoPhoneInput/>
 
+## Provided pattern
 <Demo.DemoPattenInput/>
 
+## Floating label
 <Demo.DemoPhoneLabelInput/>
 
 
