--- a/app/password-input/page.mdx
+++ b/app/password-input/page.mdx
@@ -1,10 +1,15 @@
 import * as Demo from "./Demo"
 
-
+## Basic
 <Demo.DemoBasicPasswordInput/>
-<Demo.DemoFloatinLabelPasswordInput/>
+
+## Clearable
 <Demo.DemoClearablePasswordInput/>
+
+## States
 <Demo.DemoErrorPasswordInput/>
 <Demo.DemoSuccessPasswordInput/>
+
+## Floating label
 <Demo.DemoLabelPasswordInput/>
 
