--- a/app/select/page.mdx
+++ b/app/select/page.mdx
@@ -1,11 +1,15 @@
 import * as Demo from "./Demo"
 
+## Custom select
+<Demo.DemoCustomSelect/>
 
+## Native select
 <Demo.DemoNativeSelect/>
 
+## Floating label
 <Demo.DemoNativeSelectLabel/>
 
-<Demo.DemoCustomSelect/>
+
 
 
 
