--- a/app/toast/page.mdx
+++ b/app/toast/page.mdx
@@ -1,19 +1,19 @@
 import { DemoInfoToast, DemoSuccessToast, DemoWarningToast, DemoDangerToast, DemoAutoCloseToast, DemoBottomToast} from "./Demo";
 import {ToastContainer} from '@libComponents/Toast';
 
+{/* add container in your page you want to use toast */}
+<ToastContainer/> 
 
-<ToastContainer/>
-
+## Types
 <DemoInfoToast/>
-
 <DemoSuccessToast/>
-
 <DemoWarningToast/>
-
 <DemoDangerToast/>
 
+## Duration
 <DemoAutoCloseToast/>
 
+## Bottom-center toast
 <DemoBottomToast/>
 
 
