--- a/app/input/page.mdx
+++ b/app/input/page.mdx
@@ -1,9 +1,15 @@
 import {DemoBasicInput, DemoFloatingLabelInput,DemoClearableInput,DemoErrorInput,DemoSuccessInput,DemoLabelInput} from "./Demo"
 
-
+## Basic
 <DemoBasicInput/>
+
+## Clearable
 <DemoClearableInput/>
+
+## States
 <DemoErrorInput/>
 <DemoSuccessInput/>
+
+## Floating label 
 <DemoLabelInput/>
 
