docs changelog page

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -1,5 +1,19 @@
 # Changelog
 
+## Version 0.0.9:
+
+- Chip: core
+- Date Picker: core
+- Dropdown: core
+- Floating label: core
+- Input: core
+- Modal: core
+- Number Input: core
+- Password Input: core
+- Select: core
+- Spinner: core
+- Toast: core
+
 ## Version 0.0.7:
 
 - Accordion: core
