fix: - z-index portal, modal - isOpen for dropdown control

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -1,5 +1,14 @@
 # Changelog
 
+## Version 0.1.2:
+
+- Change:
+    - Base component: create factory to help extend a component props
+- Fix:
+    - Portal: z-index
+    - Modal: z-index
+    - Dropdown: controlled by isOpen props
+
 ## Version 0.1.1:
 
 - New feature: 
