update: checkbox - add onParsed props - return parsed data - memorize parsed data when component is mounted - structured html of group checkbox - fix some bugs related to updating parent/children

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -1,5 +1,10 @@
 # Changelog
 
+## Version 0.1.3:
+
+- New feature: 
+    - Checkbox: core features, group checkbox, nested group
+
 ## Version 0.1.2:
 
 - Change:
