update: button - add colors - add kinds - scale on click - change demo - js doc for types

--- a/app/button/page.mdx
+++ b/app/button/page.mdx
@@ -1,13 +1,15 @@
-import {DemoBasicButton, DemoVariantsButton, DemoSizesButton,DemoStatesButton} from "./Demo"
+import * as Demo from "./Demo"
 
-## Basic
-<DemoBasicButton/>
 
-## Variants
-<DemoVariantsButton/>
+## Colors
+<Demo.DemoColorButton/>
+
+## Kinds
+<Demo.DemoKindButton/>
 
 ## Sizes
-<DemoSizesButton/>
+<Demo.DemoSizesButton/>
 
-## States
-<DemoStatesButton/>
+## Others
+<Demo.DemoStatesButton/>
+
