feat: accordion - no longer extends from radix - add kind, type, iconSide features

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -4,6 +4,10 @@
 
 - New feature: 
     - Checkbox: core features, group checkbox, nested group
+    - Radio: core features, group radio
+- Change:
+    - Button: split to kind and color instead of variants
+    - Accordion: no longer extends from radix
 
 ## Version 0.1.2:
 
