--- a/app/accordion/page.mdx
+++ b/app/accordion/page.mdx
@@ -1,8 +1,12 @@
-import {DemoSingle, DemoMulti} from "./Demo"
+import * as Demo from "./Demo"
 
 ## Single Accordion
-<DemoSingle/>
+<Demo.DemoSingle/>
 
 
 ## Multiple Accordion
-<DemoMulti/>
+<Demo.DemoMulti/>
+
+
+## Accordion with left icon
+<Demo.DemoIconLeft/>
