update: Accordion - improve animation - add icon types - improve props passing - add controller through value props - support generate items by items prop

--- a/app/accordion/page.mdx
+++ b/app/accordion/page.mdx
@@ -10,3 +10,9 @@ import * as Demo from "./Demo"
 
 ## Accordion with left icon
 <Demo.DemoIconLeft/>
+
+## Nested Accordion
+<Demo.NestedAccordion/>
+
+## Controlled Accordion
+<Demo.DemoControlled/>
