feat (chip): - add core props - add features of chip (button, checkbox, radio, input, dropdown)

--- a/app/chip/page.mdx
+++ b/app/chip/page.mdx
@@ -1,3 +1,37 @@
-import {DemoChip} from './Demo'
+import * as Demo from './Demo'
 
-<DemoChip/>
+## Type Button
+
+<Demo.DemoButtonChip/>
+
+## Type Checkbox
+
+<Demo.DemoCheckbox/>
+
+## Type Radio
+
+<Demo.DemoRadio/>
+
+## Type Dropdown
+
+<Demo.DemoDropdown/>
+
+## Type Input
+
+<Demo.DemoInput/>
+
+## Single Fitler (Radio)
+
+<Demo.DemoSingleFilter/>
+
+## Multi Fitler (Checkbox)
+
+<Demo.DemoMultiFilter/>
+
+## Dropdown menu (Dropdown)
+
+<Demo.DemoSelectDropdown/>
+
+## Clearable Input (Input)
+
+<Demo.DemoRemoveChip/>
