update (menu): - Integrate floating-ui lib - Navigating through menu items via up/down keys - Control Menu visibility by isOpen state - Flexible valued control with MenuItem - Integrate with Portal by isPortal prop - Detached Menu and MenuTrigger components, communicate by id(MenuTrigger) and anchorId(Menu)

--- a/app/menu/page.mdx
+++ b/app/menu/page.mdx
@@ -4,10 +4,10 @@ import * as Demo from "./Demo"
 
 <Demo.DemoBasicMenu/>
 
-{/* ## Scroll
+## Scroll
 
 <Demo.DemoScrollableMenu/>
 
 ## Group
 
-<Demo.DemoMenuGroup/> */}
+<Demo.DemoMenuGroup/>
