--- a/app/select/page.mdx
+++ b/app/select/page.mdx
@@ -9,6 +9,9 @@ import * as Demo from "./Demo"
 ## Custom select
 <Demo.DemoCustomSelect/>
 
+## Custom multiple select
+<Demo.DemoCustomMutipleSelect/>
+
 
 
 
