--- a/app/page.mdx
+++ b/app/page.mdx
@@ -3,6 +3,9 @@
 ## Version 0.1.3:
 
 - New feature: 
+    - Select: 2 types of select (custom/native) from menu 
+    - Menu: renamed from dropdown, core features
+    - Chip: core features
     - Checkbox: core features, group checkbox, nested group
     - Radio: core features, group radio
 - Change:
