fix (menu, select): base on linear issue PAR-22/26

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -3,6 +3,7 @@
 ## Version 0.1.3:
 
 - New feature: 
+    - Switch: core features
     - Select: 2 types of select (custom/native) from menu 
     - Menu: renamed from dropdown, core features
     - Chip: core features
