--- a/app/badge/page.mdx
+++ b/app/badge/page.mdx
@@ -1,13 +1,15 @@
 import * as BadgeDemo from "./Demo"
 
-## Basic 
-<BadgeDemo.DemoBasicBadge/>
+## Outline (default) 
+<BadgeDemo.DemoOutlinedBadge/>
 
-## Strong 
-<BadgeDemo.DemoStrongBadge/>
 
-## Small
-<BadgeDemo.DemoSmallBadge/>
+## Glass
+<BadgeDemo.DemoGlassBadge/>
 
-## Link
-<BadgeDemo.DemoBadgeWithLink/>
+
+## Fill
+<BadgeDemo.DemoFilledBadge/>
+
+## Dot
+<BadgeDemo.DemoDotBadge/>
