--- a/app/dot/page.mdx
+++ b/app/dot/page.mdx
@@ -4,27 +4,7 @@ import * as Demo from "./demo"
 
 <Demo.DotDemo />
 
-## Colors
-
-<Demo.ColorDotDemo size="sm"/>
-<Demo.ColorDotDemo size="md"/>
-<Demo.ColorDotDemo size="lg"/>
-
-## Kinds
-
-### Filled
-<Demo.ColorDotDemo size="sm"/>
-<Demo.ColorDotDemo size="md"/>
-<Demo.ColorDotDemo size="lg"/>
-
-### Glass
-<Demo.ColorDotDemo size="sm" kind="glass"/>
-<Demo.ColorDotDemo size="md" kind="glass"/>
-<Demo.ColorDotDemo size="lg" kind="glass"/>
-
-
 ## Pulse
 
-<Demo.ColorDotDemo size="sm" pulse/>
-<Demo.ColorDotDemo size="md" pulse/>
-<Demo.ColorDotDemo size="lg" pulse/>
+<Demo.ColorDotDemo pulse/>
+
