update (corner indicator): add inset and disable features

--- a/app/corner-indicator/page.mdx
+++ b/app/corner-indicator/page.mdx
@@ -7,3 +7,7 @@ import * as Demo from "./Demo"
 ## Corner indicator positions
 
 <Demo.DemoCornerIndicatorPosition/>
+
+## Inset
+
+<Demo.DemoCornerIndicatorInset/>
