--- a/app/page.mdx
+++ b/app/page.mdx
@@ -1,5 +1,16 @@
 # Changelog
 
+## Version 0.1.4:
+
+- New feature: 
+    - Dot: core features
+    - Badge: core features
+    - Corner Indicator: core features 
+
+- Change:
+    - Color: update v2 color
+    - Plugins: generate variables based on tailwincss theme config
+
 ## Version 0.1.3:
 
 - New feature: 
