update (tag): - remove tab index on remove button - change disable css

--- a/app/page.mdx
+++ b/app/page.mdx
@@ -3,13 +3,15 @@
 ## Version 0.1.4:
 
 - New feature: 
+    - Tag: core features, extend from Chip (input)
     - Dot: core features
     - Badge: core features
     - Corner Indicator: core features 
-
 - Change:
     - Color: update v2 color
     - Plugins: generate variables based on tailwincss theme config
+- Fix:
+    - Prevent override css from resetting css from tailwindcss
 
 ## Version 0.1.3:
 
