update (chip): - remove type input - change colors (neutral, accent)

--- a/app/chip/page.mdx
+++ b/app/chip/page.mdx
@@ -16,9 +16,6 @@ import * as Demo from './Demo'
 
 <Demo.DemoMenu/>
 
-## Type Input
-
-<Demo.DemoInput/>
 
 ## Single Fitler (Radio)
 
@@ -32,6 +29,5 @@ import * as Demo from './Demo'
 
 <Demo.DemoSelectMenu/>
 
-## Clearable Input (Input)
+<Demo.DemoSelectMenu kind="glass"/>
 
-<Demo.DemoRemoveChip/>
