update (chip): change type to toggle/dropdown

--- a/app/chip/page.mdx
+++ b/app/chip/page.mdx
@@ -1,33 +1,16 @@
 import * as Demo from './Demo'
 
-## Type Button
 
-<Demo.DemoButtonChip/>
-
-## Type Checkbox
-
-<Demo.DemoCheckbox/>
-
-## Type Radio
-
-<Demo.DemoRadio/>
+## Type Toggle
+<Demo.DemoToggle/>
 
 ## Type Dropdown
-
 <Demo.DemoMenu/>
 
-
-## Single Fitler (Radio)
-
-<Demo.DemoSingleFilter/>
-
-## Multi Fitler (Checkbox)
-
+## Multi Fitler (toggle)
 <Demo.DemoMultiFilter/>
 
 ## Dropdown menu (Dropdown)
-
 <Demo.DemoSelectMenu/>
-
 <Demo.DemoSelectMenu kind="glass"/>
 
