update (badge, button, tag, chip, c-indicator): - change fill to solid - change outline to outline

--- a/app/badge/page.mdx
+++ b/app/badge/page.mdx
@@ -1,6 +1,6 @@
 import * as BadgeDemo from "./Demo"
 
-## Outline (default) 
+## Outlined (default) 
 <BadgeDemo.DemoOutlinedBadge/>
 
 
@@ -8,8 +8,8 @@ import * as BadgeDemo from "./Demo"
 <BadgeDemo.DemoGlassBadge/>
 
 
-## Fill
-<BadgeDemo.DemoFilledBadge/>
+## Solid
+<BadgeDemo.DemoSolidBadge/>
 
 ## Dot
 <BadgeDemo.DemoDotBadge/>
