update button and rename fill-tokens to solid-tokens

--- a/app/button/page.mdx
+++ b/app/button/page.mdx
@@ -13,3 +13,7 @@ import * as Demo from "./Demo"
 ## Others
 <Demo.DemoStatesButton/>
 
+## Dark mode
+<Demo.DemoKindButton theme="dark" />
+<Demo.DemoStatesButton theme="dark" />
+
