update (chip, cornerIndicator): add tokens, add dark mode review

--- a/app/badge/page.mdx
+++ b/app/badge/page.mdx
@@ -14,5 +14,20 @@ import * as BadgeDemo from "./Demo"
 ## Dot
 <BadgeDemo.DemoDotBadge/>
 
-## Dark 
-<BadgeDemo.DemoDotBadgeDark/>
+## Dark mode
+
+<div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
+## Outlined (default) 
+<BadgeDemo.DemoOutlinedBadge/>
+
+
+## Glass
+<BadgeDemo.DemoGlassBadge/>
+
+
+## Solid
+<BadgeDemo.DemoSolidBadge/>
+
+## Dot
+<BadgeDemo.DemoDotBadge/>
+</div>
