--- a/app/button/page.mdx
+++ b/app/button/page.mdx
@@ -14,6 +14,18 @@ import * as Demo from "./Demo"
 <Demo.DemoStatesButton/>
 
 ## Dark mode
-<Demo.DemoKindButton theme="dark" />
-<Demo.DemoStatesButton theme="dark" />
+
+<div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
+## Colors
+<Demo.DemoColorButton/>
+
+## Kinds
+<Demo.DemoKindButton/>
+
+## Sizes
+<Demo.DemoSizesButton/>
+
+## Others
+<Demo.DemoStatesButton/>
+</div>
 
