--- a/app/dot/page.mdx
+++ b/app/dot/page.mdx
@@ -8,3 +8,14 @@ import * as Demo from "./demo"
 
 <Demo.ColorDotDemo pulse/>
 
+## Dark mode
+
+<div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
+## Sizes
+
+<Demo.DotDemo />
+
+## Pulse
+
+<Demo.ColorDotDemo pulse/>
+</div>
