--- a/app/tag/page.mdx
+++ b/app/tag/page.mdx
@@ -5,6 +5,10 @@ import * as Demo from './Demo'
 <Demo.DemoButtonTag/>
 
 
-## Darke mode
+## Dark mode
 
-<Demo.DemoButtonTag theme="dark"/>
+<div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
+## Tag
+
+<Demo.DemoButtonTag/>
+</div>
