--- a/app/chip/page.mdx
+++ b/app/chip/page.mdx
@@ -14,3 +14,20 @@ import * as Demo from './Demo'
 <Demo.DemoSelectMenu/>
 <Demo.DemoSelectMenu kind="glass"/>
 
+## Dark mode
+
+<div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
+## Type Toggle
+<Demo.DemoToggle/>
+
+## Type Dropdown
+<Demo.DemoMenu/>
+
+## Multi Fitler (toggle)
+<Demo.DemoMultiFilter/>
+
+## Dropdown menu (Dropdown)
+<Demo.DemoSelectMenu/>
+<Demo.DemoSelectMenu kind="glass"/>
+</div>
+
