--- a/app/corner-indicator/page.mdx
+++ b/app/corner-indicator/page.mdx
@@ -11,3 +11,19 @@ import * as Demo from "./Demo"
 ## Inset
 
 <Demo.DemoCornerIndicatorInset/>
+
+## Dark mode
+
+<div className="bg-gray-950 text-white p-4 rounded-md flex flex-col gap-4" data-scheme="dark">
+## Basic corner indicator
+
+<Demo.DemoCornerIndicator/>
+
+## Corner indicator positions
+
+<Demo.DemoCornerIndicatorPosition/>
+
+## Inset
+
+<Demo.DemoCornerIndicatorInset/>
+</div>
