update (breadcrumb): add base breadcrumb

--- a/app/breadcrumb/page.mdx
+++ b/app/breadcrumb/page.mdx
@@ -1,4 +1,9 @@
-import * as BadgeDemo from "./Demo"
+import {DemoBreadcrumbBasic} from "./Demo"
 
-{/*  */}
+
+## Basic
+
+<DemoBreadcrumbBasic/>
+<DemoBreadcrumbBasic separator="slash"/>
+
 
