--- a/app/tabs/page.mdx
+++ b/app/tabs/page.mdx
@@ -1,9 +1,5 @@
-import * as BadgeDemo from "./Demo"
+import {DemoTabs} from "./Demo"
 
-## Outline (default) 
-<BadgeDemo.DemoOutlinedBadge/>
-
-
-## Glass
-<BadgeDemo.DemoGlassBadge/>
+## Basic
+<DemoTabs/>
 
