fix (input): - fix control behavior - enhance input padding for flexibility - change number input (not use third lib)

--- a/app/number-input/page.mdx
+++ b/app/number-input/page.mdx
@@ -1,19 +1,8 @@
-import * as Demo from "./Demo"
+import {DemoNumberInput} from "./Demo"
 
 ## Thousands separator
-<Demo.DemoNumberInput/>
+<DemoNumberInput isClearable/>
 
-## Currency unit
-<Demo.DemoCurrencyInput/>
-
-## Space separator
-<Demo.DemoPhoneInput/>
-
-## Provided pattern
-<Demo.DemoPattenInput/>
-
-## Floating label
-<Demo.DemoPhoneLabelInput/>
 
 
 
