update (input): draft - remove hovered - change readOnly, disabled, invalid-focused

--- a/app/text-input/page.mdx
+++ b/app/text-input/page.mdx
@@ -81,7 +81,7 @@ import { Box } from 'lucide-react';
 
 <DemoBasicInput isError={true} errorMessage='Error message' isClearable placeholder='Placeholder' theme="alternative"/>
 <DemoBasicInput isError={true} errorMessage='Error message' isClearable placeholder='Placeholder'  leftIcon={<Box />} theme="alternative"/>
-<DemoBasicInput disabled isClearable placeholder='Placeholder' />
+<DemoBasicInput disabled isClearable placeholder='Placeholder' theme="alternative"/>
 <DemoBasicInput disabled isClearable value='This is disabled text input' placeholder='Placeholder'  leftIcon={<Box />} theme="alternative"/>
 <DemoBasicInput readOnly isClearable value='This is read only text input' placeholder='Placeholder' />
 <DemoBasicInput readOnly isClearable value='This is read only text input' placeholder='Placeholder'  leftIcon={<Box />} theme="alternative" />
