feat (number input): - integrate react-number-format parser - (input): remove hover state

--- a/app/number-input/page.mdx
+++ b/app/number-input/page.mdx
@@ -4,7 +4,7 @@ import { CircleDollarSign } from 'lucide-react';
 
 ## Basic
 
-<DemoNumberInput placeholder='Placeholder'  unit="$"/>
+<DemoNumberInput placeholder='Placeholder' unit="$" min={0} max={1000} />
 <DemoNumberInput placeholder='Placeholder' leftIcon={<CircleDollarSign />} unit={["USD", "VND", "EUR", "JPY"]} />
 
 ## Clearable
